--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Quiz</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/jquery.rippleria.css">
 
 </head>
 
@@ -46,7 +47,8 @@
     }
     .question-str{
            color:#122b40;
-           font-size: 20px;
+           font-size: 16px;
+           font-weight: 500;
     }
     .ans{
         color: #fff;
@@ -59,9 +61,17 @@
      .block{
          background-color: #fff;
          padding:5%;
+         border-radius:4px;
+         border-left:10px solid #0869bb;
+         height:300px;
      }
+    .alert{
+        margin-bottom: 5px;
+        padding:5px;
+    }
 </style>
    <div class="container-fluid">
+
        <div class="row">
            <div class="col-sm-12 text-center full-window">
                   <div class="form-group text-center ">
@@ -73,11 +83,16 @@
                       <button class="btn btn-success btn-lg start-test" style="font-size: 30px;">Start Test</button>
                   </div>
            </div>
-           <div class="col-sm-12 text-center question "  id="QuestionBlock" hidden>
-
+           <div class="col-sm-12 text-center question "  id="QuestionBlockMain"  hidden>
+               <div  class=" col-sm-offset-3 col-sm-6 text-left block" data-rippleria-color="#61ca66"
+                     id="QuestionBlock"></div>
            </div>
            <div class="col-sm-12 charts-area" hidden id="charts">
-                   <div class="col-sm-offset-3 col-sm-6 " id="container" style="height: 400px;" ></div>
+               <div class="col-sm-offset-3 col-sm-6 " id="container" style="height: 400px;" ></div>
+               <button id="details" class="btn btn-success details" style="position: relative;top:1%; right: 10%;z-index:1000;">Test Details</button>
+           </div>
+           <div class="col-sm-12 charts-area" hidden id="details-block">
+                    <div class="col-sm-offset-2 col-sm-8" style="height: 400px;border-radius:4px;padding: 20px;background-color: #fff;" id="show-details"></div>
            </div>
        </div>
    </div>
@@ -86,10 +101,18 @@
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/highcharts-3d.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script>
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="js/jquery.rippleria.js"></script>
 
+<script>
+    $('#QuestionBlock').rippleria({
+        easing: 'ease-in',
+        detectBrightness: true
+
+    });
     $(document).ready(function () {
              var data=new Object();
+
                   data={
                       "Number":1,
                       "Question":"How do you feel about God?",
@@ -162,7 +185,7 @@
 
                          $(".full-window").hide();
                              if(SolvedQuestion>=5){
-                                 $("#QuestionBlock").fadeOut(3000);
+                                 $("#QuestionBlockMain").fadeOut(3000);
                                  Charts();
                                  $("#charts").show().fadeIn(3000);
                                  return false;}
@@ -171,89 +194,114 @@
                  }
 
 
+        $(".start-test").on("click",function () {
+            var name=$(".input-name").val();
 
-            $(".start-test").on("click",function () {
-                var name=$(".input-name").val();
+            if(name==null || name=="undefined" || name==""){
 
-               if(name==null || name=="undefined" || name==""){
+                $(".alert").show().fadeOut(3000);
+                return false;
+            }  else{
+                $(".alert").removeClass("alert-danger").addClass("alert-success").text("!!! Congratulations !!!").show().fadeOut(3000);
+                $(".full-window").fadeOut(3000);
+                localStorage.setItem("Name",name);
 
-                   $(".alert").show().fadeOut(5000);
-                   return false;
-               }  else{
-                   $(".alert").removeClass("alert-danger").addClass("alert-success").text("!!! Congratulations !!!").show().fadeOut(4000);
-                   $(".full-window").fadeOut(4000);
-                   localStorage.setItem("Name",name);
+                FetchQuestion(1);
+            }
+        });
+        $("#QuestionBlock").on("click","form input[type='radio']",function (e) {
 
-                   FetchQuestion(1);
-
-               }
-            });
-        $("form input[type='radio']").on("click",function (e) {
-
-              var solved= localStorage.getItem("SolvedQuestion") ;
-                solved=parseInt(solved);
-                  solved++;
+            var solved= localStorage.getItem("SolvedQuestion") ;
+            solved=parseInt(solved);
+            solved++;
             var answer="Answer"+(solved);
-             var value=$(this).attr('value');
+            var value=$(this).attr('value');
             localStorage.setItem(answer,value);
             if(solved>5){
                 return false;
             }else if(solved==5){
                 localStorage.setItem("SolvedQuestion",5);
-                $("#QuestionBlock").fadeOut(3000);
+
                 UpdateScore();
                 Charts();
-                $("#charts").fadeIn(1000);
 
-                      return false;
+                $("#QuestionBlockMain").fadeOut();
+                $("#charts").fadeIn(3000);
+                return false;
             } else{
 
                 FetchQuestion(solved+1);
             }
-
-
         });
-
-
 
     });
 
-    function FetchQuestion($number){
 
+    $("#charts").on("click","#details",function () {
+
+        ShowDetails();
+        $("#details-block").show();
+        $("#charts").hide();
+    });
+    function ShowDetails() {
+          var table="<form class=''>";
+          for(i=1;i<=5;i++){
+              var Question="Question"+i;
+              var Answer="Answer"+i;
+              var Ques=localStorage.getItem(Question);
+                  Ques=JSON.parse(Ques);
+              var Ans=localStorage.getItem(Answer);
+             table+="<div class='' >" +
+                     " <label class='alert alert-danger' style='width: 95%;'>Question : "+Ques.Question+"</label><br>";
+              table+="<label class='alert alert-success'style='width: 45%;margin-right: 5%;background-color: #fff;' >Correct Answer : "+Ques.correct+"</label>";
+              if(Ans==Ques.correct){
+                  table+="<label class='alert alert-success ' style='width: 45%; background-color: #fff; '>Your Answer : "+Ans+" <span class='glyphicon glyphicon-ok ' style='color: #4cae4c'></span></label>";
+              } else{
+                  table+="<label class='alert alert-info' style='width: 45%; background-color: #fff;'>Your Answer : "+Ans+" <span class='glyphicon glyphicon-remove ' style='color: #ac2925'></span></label>";
+              }
+
+              table+="</div>";
+          }
+          table+="</form>";
+         $("#show-details").html(table);
+    }
+
+    function FetchQuestion($number){
         localStorage.setItem("SolvedQuestion",$number-1);
         var key="Question"+$number;
         var data=localStorage.getItem(key);
         data=JSON.parse(data);
-        var table='';
-        table+='<div class=" col-sm-offset-3 col-sm-6 text-left block">';
-        table+='<form class="form-group">';
-        table+='<label for="" class="question-str">'+$number+' )'+ data.Question+'</label>';
-        table+='<div class="radio">';
+        var table=' ';
+
+        table+='<form id="form-data" class="form-group">';
+        table+='<label for="" class="question-str">'+$number+' )  '+ data.Question+'</label>';
+        table+='<div style="padding-left: 60px;" class="radio">';
         table+='<input type="radio" class="ans"  name="gender" data-value="'+data.correct+'" value="'+data.option1+'">';
         table+='<label >';
         table+=data.option1+'  </label></div>';
-        table+='<div class="radio">';
+        table+='<div style="padding-left: 60px;" class="radio"> ';
         table+=' <input type="radio" class="ans" name="gender"  value="'+data.option2+'" data-value="'+data.option2+'"><label >';
         table+=data.option2+' </label></div>';
-        table+='<div class="radio">';
+        table+='<div style="padding-left: 60px;" class="radio"> ';
 
         table+=' <input type="radio"  class="ans" name="gender" value="'+data.option3+'" data-value="'+data.option3+'">';
         table+=' <label >';
         table+=data.option3+' </label >  </div>';
-        table+='<div class="radio">';
+        table+='<div style="padding-left: 60px;" class="radio">';
 
         table+='     <input  class="ans" type="radio"  name="gender" value="'+data.option4+'" data-value="'+data.option4+'">';
         table+=' <label>';
-        table+=data.option4+' </label ></div></form></div>';
+        table+=data.option4+' </label ></div></form> ';
 
         $("#QuestionBlock").empty();
-        $("#QuestionBlock").html(table).fadeIn(3000);
+        $("#QuestionBlock").html(table);
+        $("#QuestionBlockMain").show().fadeIn(3000);
 
 
     }
 
     function UpdateScore(){
-                 var correct=0;
+         var correct=0;
          for(i=1;i<=5;i++){
              var Question="Question"+i;
            var data=  localStorage.getItem(Question);
@@ -313,5 +361,6 @@ function Charts() {
 }
 
 </script>
+
 </body>
 </html>
